# liberasurecode

./: .gitignore  Makefile.am  configure.ac  cudalt.py
include/: config_liberasurecode.h.in~
include/erasurecode/: erasurecode.h
include/gpu_rscode/: decode.h  encode.h  gpu_rscode.h  matrix.h
src/: Makefile.am  erasurecode.c
src/backends/gpu_rscode/: gpu_rscode.c
src/builtin/gpu_rscode/: Makefile.am  README.md  cpu_decode.c  gpu_decode.cu  gpu_encode.cu  gpu_matrix.cu  gpu_rscode.c
test/: Makefile.am
test/builtin/gpu_rscode/: libgpu_rscode_test.c
